package com.patterns;

public interface InterTopo {
    public double calcularProporcion();
}
